# voxcaster

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml
examples/: narrate_long_job.py  quiet_hours.sh  urgent_interrupt.py
src/speakd/: __init__.py  client.py  config.py  daemon.py  engine.py  protocol.py
