[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxcaster"
version = "0.2.0"
description = "Local text-to-speech daemon and CLI for speech notifications from scripts, builds, cron jobs, and ML training runs, powered by Kokoro TTS with GPU offload and espeak fallback."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ibrahim Alfa" }]
requires-python = ">=3.10"
keywords = [
    "tts",
    "text-to-speech",
    "speech-synthesis",
    "speech-notifications",
    "kokoro",
    "kokoro-tts",
    "daemon",
    "unix-socket",
    "cli",
    "narration",
    "notifications",
    "machine-learning",
    "gpu",
    "cuda",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "kokoro>=0.9",
    "soundfile>=0.12",
    "numpy>=1.24",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/I-Alpha/voxcaster"
Repository = "https://github.com/I-Alpha/voxcaster"
Issues = "https://github.com/I-Alpha/voxcaster/issues"
Changelog = "https://github.com/I-Alpha/voxcaster/blob/master/CHANGELOG.md"

[project.scripts]
voxcaster = "voxcaster.daemon:main"
speak = "voxcaster.client:main"

[tool.setuptools.packages.find]
where = ["src"]
